# hack-components

./: README.md  build-flatpak.sh  com.endlessm.HackComponents.json.in  flatpak-overrides.in  hack-data.ini  meson.build  meson_options.txt  subst-script
data/: com.endlessm.HackComponents.appdata.xml  meson.build
hack-backgrounds/: hack-backgrounds.xml  hack-backgrounds.xml.in
